syntax = "proto3";

package smithytranslate;

message BigDecimal {
  string value = 1;
}

message BigInteger {
  string value = 1;
}

message Document {
  oneof definition {
    smithytranslate.DNull dNull = 1;
    smithytranslate.DBoolean dBoolean = 2;
    smithytranslate.DNumber dNumber = 3;
    smithytranslate.DString dString = 4;
    smithytranslate.DArray dArray = 5;
    smithytranslate.DObject dObject = 6;
  }
}

message Timestamp {
  int64 value = 1;
}

message UUID {
  int64 upper_bits = 1;
  int64 lower_bits = 2;
}
